2004-12-21  Ethan Merritt  <merritt@u.washington.edu>

	* term/ggi.trm (GGI_replot) src/mousecmn.h src/mouse.c (do_event):
	Remove the one and only instance of GE_cmd as an event type, used
	by ggi.trm to trigger a replot.

	* term/ggi.trm (GGI_set_color): Convert to newer API for set_color.

2004-12-21  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/emf.trm (EMF_filled_polygon): Renamed macro META_POLYGON to
	EMF_POLYGON, to avoid conflict with Win32 headers.

2004-12-21  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS docs/gnuplot.doc src/pm3d.h src/pm3d.c src/save.c src/set.c
	src/show.c: New suboptions 'set pm3d corners2color min|max'.

2004-12-20  Ethan Merritt  <merritt@u.washington.edu>

	* term/fig.trm (FIG_put_text) term/gd.trm (PNG_put_text, ENHGD_FLUSH):
	Modify vertical centering text to match most other terminal types.
	This causes text rotation to occur about the vertical midpoint, as in
	the post, x11, pdf, and other terminals. (Bug #1086549)

2004-12-20  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/pm.trm (PM_set_color): Reflect recent changes of parameters in
	term entries.

	* src/os2/gnupmdrv.h src/os2/gclient.c: gnupmdrv.c and gclient.c both
	used to define variable bWidelLines, but it should be the same one.
	This patch adds an 'external' declaration in gnupmdrv.h, and removes
	the definition from gclient.c.

	* src/os2/gclient.c: Within GnuplotPM  "Options->Gnuplot docs...", it
	did not open gnuplot.inf when using NewView, a widely used view.exe
	replacement. Replaced the fixed sized buffer solution with code using
	a dynamic buffer.

	* src/os2/gclient.c: This fixes text rotation for the pm terminal. The
	variable bHorz, which used to indicate horizontal text, has now been
	removed completely. Now pm terminal behaves similar to the postscript
	terminal.

2004-12-15  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/parse.c (push_vars): Conditionalize definition on GP_ISVAR.